--- a/AmigoDono.Web/Views/Login/Index.cshtml
+++ b/AmigoDono.Web/Views/Login/Index.cshtml
@@ -1,6 +1,7 @@
 ﻿
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
+    ViewBag.Title = "Login";
 }
 
 <!DOCTYPE html>
@@ -35,7 +36,7 @@
         </div>
         <button class="btn btn-lg btn-primary btn-block" type="submit">Entrar</button>
         <br />
-        <p class="text-center">@Html.ActionLink("Não tem conta? Faça o seu cadastro","Create","DENUNCIA")</p>
+        <p class="text-center">@Html.ActionLink("Não tem conta? Faça o seu cadastro","Create","AMIGO")</p>
     </form>
 </body>
 </html>
