--- a/AmigoDono.Web/Views/AMIGO/Create.cshtml
+++ b/AmigoDono.Web/Views/AMIGO/Create.cshtml
@@ -1,55 +1,50 @@
 ﻿@model AmigoDono.Model.AMIGO
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Cadastre-se";
 }
 
-<h2>Create</h2>
 
-@using (Html.BeginForm()) 
-{
-    @Html.AntiForgeryToken()
-    
-    <div class="row">
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+@*<div class="row">
+            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
-            @Html.LabelFor(model => model.Nome, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-7">
-                @Html.EditorFor(model => model.Nome, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Nome, "", new { @class = "text-danger" })
+                @Html.LabelFor(model => model.Nome, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-7">
+                    @Html.EditorFor(model => model.Nome, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Nome, "", new { @class = "text-danger" })
+                </div>
+
+            <div class="form-group col-md-5">
+                @Html.LabelFor(model => model.Senha, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-5">
+                    @Html.EditorFor(model => model.Senha, new { htmlAttributes = new { @class = "password" } })
+                    @Html.ValidationMessageFor(model => model.Senha, "", new { @class = "text-danger" })
+                </div>
             </div>
 
-        <div class="form-group col-md-5">
-            @Html.LabelFor(model => model.Senha, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-5">
-                @Html.EditorFor(model => model.Senha, new { htmlAttributes = new { @class = "password" } })
-                @Html.ValidationMessageFor(model => model.Senha, "", new { @class = "text-danger" })
+            <div class="form-group col-md-5">
+                @Html.LabelFor(model => model.CPF, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-5">
+                    @Html.EditorFor(model => model.CPF, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.CPF, "", new { @class = "text-danger" })
+                </div>
             </div>
-        </div>
 
-        <div class="form-group col-md-5">
-            @Html.LabelFor(model => model.CPF, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-5">
-                @Html.EditorFor(model => model.CPF, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.CPF, "", new { @class = "text-danger" })
+            <div class="form-group col-md-5">
+                @Html.LabelFor(model => model.DataNascimento, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.DataNascimento, new { htmlAttributes = new { @class = "date" } })
+                    @Html.ValidationMessageFor(model => model.DataNascimento, "", new { @class = "text-danger" })
+                </div>
             </div>
-        </div>
 
-        <div class="form-group col-md-5">
-            @Html.LabelFor(model => model.DataNascimento, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.DataNascimento, new { htmlAttributes = new { @class = "date" } })
-                @Html.ValidationMessageFor(model => model.DataNascimento, "", new { @class = "text-danger" })
+            @*<div class="form-group">
+                @Html.LabelFor(model => model.DataCadastro, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.DataCadastro, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.DataCadastro, "", new { @class = "text-danger" })
+                </div>
             </div>
-        </div>
-
-        @*<div class="form-group">
-            @Html.LabelFor(model => model.DataCadastro, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.DataCadastro, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.DataCadastro, "", new { @class = "text-danger" })
-            </div>
-        </div>*@
 
         <div class="form-group col-md-5">
             @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -143,9 +138,148 @@
                 <input type="submit" value="Create" class="btn btn-default" />
             </div>
         </div>
-    </div>
-}
+        </div>
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
+    <div>
+        @Html.ActionLink("Back to List", "Index")
+    </div>*@
+
+<!DOCTYPE html>
+<html>
+<head>
+    <script>
+    $( function() {
+    $( "#datepicker" ).datepicker();
+    } );
+    </script>
+</head>
+<body class="bg-light">
+    <div class="container" style="margin-top: 80px">
+        <div class="py-5 text-center">
+            <h2>Faça o seu cadastro</h2>
+            </div>
+            <div class="col-md-8" style="margin-left: 150px">
+                <form class="needs-validation" novalidate>
+                    <div class="row">
+                        <div class="col-md-6 mb-3">
+                            @Html.LabelFor(model => model.Nome)
+                            @Html.EditorFor(model => model.Nome, new { htmlAttributes = new { @class = "form-control" } })
+                            <div class="invalid-feedback">
+                                É obrigatório inserir um nome válido.
+                            </div>
+                        </div>
+                    </div>
+                    <div class="mb-3">
+                        @Html.LabelFor(model => model.DataNascimento)
+                        <div class="input-group">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text"></span>
+                            </div>
+                            @Html.EditorFor(model => model.DataNascimento, new { htmlAttributes = new { @class="form-control", @id = "datepicker" } })
+                            <div class="invalid-feedback">
+                                Inserira uma data.
+                            </div>
+                        </div>
+                        </div>
+                        <h4 class="mb-3">Sexo</h4>
+                        <div class="d-block my-3">
+                            <div class="custom-control custom-radio">
+                                <input id="Sexo-Masculino" name="Sexo" type="radio" class="custom-control-input" checked required>
+                                <label class="custom-control-label" for="credito">Masculino</label>
+                            </div>
+                            <div class="custom-control custom-radio">
+                                <input id="Sexo-Feminino" name="paymentMethod" type="radio" class="custom-control-input" required>
+                                <label class="custom-control-label" for="debito">Feminino</label>
+                            </div>
+                        </div>
+                        <div class="mb-3">
+                            @Html.LabelFor(model => model.Senha)
+                            <div class="input-group">
+                                <div class="input-group-prepend">
+                                    <span class="input-group-text"></span>
+                                </div>
+                                @Html.EditorFor(model => model.Senha, new { htmlAttributes = new { @class = "form-control", @type = "password" } })
+                                <div class="invalid-feedback" style="width: 100%;">
+                                    Sua senha é obrigatória.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="mb-3">
+                            @Html.LabelFor(model => model.Email)
+                            @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control", @placeholder = "fulano@exemplo.com" } })
+                            <div class="invalid-feedback">
+                                Por favor, insira um endereço de email válido.
+                            </div>
+                        </div>
+                        <div class="mb-3">
+                            <label for="endereco">Endereço</label>
+                            <input type="text" class="form-control" id="endereco" placeholder="Rua dos bobos, nº 0" required>
+                            <div class="invalid-feedback">
+                                Por favor, insira seu endereço de entrega.
+                            </div>
+                        </div>
+
+                        <div class="row">
+                            <div class="col-md-5 mb-3">
+                                @Html.LabelFor(model => model.Cidade)
+                                <select class="custom-select d-block w-100 form-control" id="pais" required>
+                                    <option value="">Escolha...</option>
+                                    <option>Brasil</option>
+                                </select>
+                                <div class="invalid-feedback">
+                                    Por favor, escolha uma cidade.
+                                </div>
+                            </div>
+                            <div class="col-md-4 mb-3">
+                                @Html.LabelFor(model => model.UF)
+                                @Html.EditorFor(model => model.UF, new { htmlAttributes = new { @class = "custom-select d-block w-100 form-control" } })
+                                <select>
+                                    <option value="">Escolha...</option>
+                                    <option value="AC">Acre</option>
+                                    <option value="AL">Alagoas</option>
+                                    <option value="AP">Amapá</option>
+                                    <option value="AM">Amazonas</option>
+                                    <option value="BA">Bahia</option>
+                                    <option value="CE">Ceará</option>
+                                    <option value="DF">Distrito Federal</option>
+                                    <option value="ES">Espirito Santo</option>
+                                    <option value="GO">Goiás</option>
+                                    <option value="MA">Maranhão</option>
+                                    <option value="MS">Mato Grosso do Sul</option>
+                                    <option value="MT">Mato Grosso</option>
+                                    <option value="MG">Minas Gerais</option>
+                                    <option value="PA">Pará</option>
+                                    <option value="PB">Paraíba</option>
+                                    <option value="PR">Paraná</option>
+                                    <option value="PE">Pernambuco</option>
+                                    <option value="PI">Piauí</option>
+                                    <option value="RJ">Rio de Janeiro</option>
+                                    <option value="RN">Rio Grande do Norte</option>
+                                    <option value="RS">Rio Grande do Sul</option>
+                                    <option value="RO">Rondônia</option>
+                                    <option value="RR">Roraima</option>
+                                    <option value="SC">Santa Catarina</option>
+                                    <option value="SP">São Paulo</option>
+                                    <option value="SE">Sergipe</option>
+                                    <option value="TO">Tocantins</option>
+                                </select>
+
+                                <div class="invalid-feedback">
+                                    Por favor, insira um estado válido.
+                                </div>
+                            </div>
+                            <div class="col-md-3 mb-3">
+                                @Html.LabelFor(model => model.CEP)
+                                @Html.EditorFor(model => model.CEP, new { htmlAttributes = new { @class = "form-control", @id = "txtCEP" } })
+                                <div class="invalid-feedback">
+                                    É obrigatório inserir um CEP.
+                                </div>
+                            </div>
+                        </div>
+                        <hr class="mb-4">
+                        <button class="btn btn-primary btn-lg btn-block" type="submit">Concluir Cadastro</button>
+</form>
+            </div>
+        </div>
+</body>
+</html>
