--- a/AmigoDono.Web/Views/Shared/_Layout.cshtml
+++ b/AmigoDono.Web/Views/Shared/_Layout.cshtml
@@ -3,7 +3,13 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="~/Content/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="~/Content/css/bootstrap.min.css" rel="stylesheet">
+    <link href="~/Content/css/pets.css" rel="stylesheet">
+    <link href="~/Content/css/fom-validation.css">
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+    <link rel="stylesheet" href="/resources/demos/style.css">
+    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <title>@ViewBag.Title</title>
 
     @Scripts.Render("~/bundles/modernizr")
@@ -12,7 +18,7 @@
     <header>
         <nav class="navbar navbar-default navbar-fixed-top" style="background-color: #ddbb24">
             <img alt="Owner's Friend" class="img-responsive navbar-left" src="~/Content/imagens/Logo2.png" width="72" height="72" title="Owner's Friend">
-            @Html.ActionLink("Owner's Friend", "Index", "Home", new { area = ""}, new { @class = "navbar-brand" })
+            @Html.ActionLink("Owner's Friend", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <ul class="navbar-nav nav">
                     <li>
@@ -35,21 +41,47 @@
 
     <div class="container body-content">
         @RenderBody()
-        <footer style="border-top: 1px solid black; clear: both; margin-top: 20px" >
+        <footer style="border-top: 1px solid black; clear: both; margin-top: 20px">
             <p style="text-align: center">&copy; @DateTime.Now.Year -  Owner's Friend</p>
         </footer>
     </div>
 
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/bootstrap")
+
     @if (ViewBag.Alerta != null)
     {
         <script type="text/javascript">
                 bootbox.alert('@ViewBag.Alerta');
         </script>
     }
-    @RenderSection("scripts", required: false)
+    <script>
+        // Exemplo de JavaScript para desativar o envio do formulário, se tiver algum campo inválido.
+        (function () {
+            'use strict';
 
+            window.addEventListener('load', function () {
+                // Selecione todos os campos que nós queremos aplicar estilos Bootstrap de validação customizados.
+                var forms = document.getElementsByClassName('needs-validation');
+
+                // Faz um loop neles e previne envio
+                var validation = Array.prototype.filter.call(forms, function (form) {
+                    form.addEventListener('submit', function (event) {
+                        if (form.checkValidity() === false) {
+                            event.preventDefault();
+                            event.stopPropagation();
+                        }
+                        form.classList.add('was-validated');
+                    }, false);
+                });
+            }, false);
+        })();</script>
+
+    <script src="~/Scripts/Mascaras.js"></script>
+    <script src="~/Scripts/pets.js"></script>
+
+    @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/bootstrap")
+    @Scripts.Render("~/bundles/inputmask")
+    @RenderSection("scripts", required: false)
 
 </body>
 </html>
