--- a/AmigoDono.Web/Views/AMIGO/Create.cshtml
+++ b/AmigoDono.Web/Views/AMIGO/Create.cshtml
@@ -144,15 +144,6 @@
         @Html.ActionLink("Back to List", "Index")
     </div>*@
 
-<!DOCTYPE html>
-<html>
-<head>
-    <script>
-    $( function() {
-    $( "#datepicker" ).datepicker();
-    } );
-    </script>
-</head>
 <body class="bg-light">
     <div class="container" style="margin-top: 80px">
         <div class="py-5 text-center">
@@ -161,11 +152,12 @@
             <div class="col-md-8" style="margin-left: 150px">
                 <form class="needs-validation" novalidate>
                     <div class="row">
-                        <div class="col-md-6 mb-3">
+                        <div class="col-md-12 mb-3" required autofocus>
                             @Html.LabelFor(model => model.Nome)
                             @Html.EditorFor(model => model.Nome, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.Nome, "", new { @class = "text-danger" })
                             <div class="invalid-feedback">
-                                É obrigatório inserir um nome válido.
+                                Insira um nome.
                             </div>
                         </div>
                     </div>
@@ -175,9 +167,9 @@
                             <div class="input-group-prepend">
                                 <span class="input-group-text"></span>
                             </div>
-                            @Html.EditorFor(model => model.DataNascimento, new { htmlAttributes = new { @class="form-control", @id = "datepicker" } })
+                            @Html.EditorFor(model => model.DataNascimento, new { htmlAttributes = new { @class="form-control", @id="datapicker" } })
                             <div class="invalid-feedback">
-                                Inserira uma data.
+                                Insira uma data.
                             </div>
                         </div>
                         </div>
@@ -200,7 +192,7 @@
                                 </div>
                                 @Html.EditorFor(model => model.Senha, new { htmlAttributes = new { @class = "form-control", @type = "password" } })
                                 <div class="invalid-feedback" style="width: 100%;">
-                                    Sua senha é obrigatória.
+                                    Insira uma senha.
                                 </div>
                             </div>
                         </div>
@@ -215,71 +207,95 @@
                             <label for="endereco">Endereço</label>
                             <input type="text" class="form-control" id="endereco" placeholder="Rua dos bobos, nº 0" required>
                             <div class="invalid-feedback">
-                                Por favor, insira seu endereço de entrega.
+                                Por favor, insira seu endereço.
                             </div>
                         </div>
 
                         <div class="row">
                             <div class="col-md-5 mb-3">
                                 @Html.LabelFor(model => model.Cidade)
-                                <select class="custom-select d-block w-100 form-control" id="pais" required>
-                                    <option value="">Escolha...</option>
-                                    <option>Brasil</option>
-                                </select>
-                                <div class="invalid-feedback">
-                                    Por favor, escolha uma cidade.
-                                </div>
-                            </div>
-                            <div class="col-md-4 mb-3">
-                                @Html.LabelFor(model => model.UF)
-                                @Html.EditorFor(model => model.UF, new { htmlAttributes = new { @class = "custom-select d-block w-100 form-control" } })
-                                <select>
-                                    <option value="">Escolha...</option>
-                                    <option value="AC">Acre</option>
-                                    <option value="AL">Alagoas</option>
-                                    <option value="AP">Amapá</option>
-                                    <option value="AM">Amazonas</option>
-                                    <option value="BA">Bahia</option>
-                                    <option value="CE">Ceará</option>
-                                    <option value="DF">Distrito Federal</option>
-                                    <option value="ES">Espirito Santo</option>
-                                    <option value="GO">Goiás</option>
-                                    <option value="MA">Maranhão</option>
-                                    <option value="MS">Mato Grosso do Sul</option>
-                                    <option value="MT">Mato Grosso</option>
-                                    <option value="MG">Minas Gerais</option>
-                                    <option value="PA">Pará</option>
-                                    <option value="PB">Paraíba</option>
-                                    <option value="PR">Paraná</option>
-                                    <option value="PE">Pernambuco</option>
-                                    <option value="PI">Piauí</option>
-                                    <option value="RJ">Rio de Janeiro</option>
-                                    <option value="RN">Rio Grande do Norte</option>
-                                    <option value="RS">Rio Grande do Sul</option>
-                                    <option value="RO">Rondônia</option>
-                                    <option value="RR">Roraima</option>
-                                    <option value="SC">Santa Catarina</option>
-                                    <option value="SP">São Paulo</option>
-                                    <option value="SE">Sergipe</option>
-                                    <option value="TO">Tocantins</option>
-                                </select>
+                                    @Html.EditorFor(model => model.Cidade, new { htmlAttributes = new { @class = "form-control" } })
+                                        <div class="invalid-feedback">
+                                            Por favor, escolha uma cidade.
+                                        </div>
+                                    </div>
+                                    <div class="col-md-4 mb-3">
+                                        @Html.LabelFor(model => model.UF)
+                                        @Html.EditorFor(model => model.UF, new { htmlAttributes = new { @class = "custom-select d-block w-100 form-control" } })
+                                        <select>
+                                            <option value="">Escolha...</option>
+                                            <option value="AC">AC</option>
+                                            <option value="AL">AL</option>
+                                            <option value="AP">AP</option>
+                                            <option value="AM">AM</option>
+                                            <option value="BA">BA</option>
+                                            <option value="CE">CE</option>
+                                            <option value="DF">DF</option>
+                                            <option value="ES">ES</option>
+                                            <option value="GO">GO</option>
+                                            <option value="MA">MA</option>
+                                            <option value="MS">MS</option>
+                                            <option value="MT">MT</option>
+                                            <option value="MG">MG</option>
+                                            <option value="PA">PA</option>
+                                            <option value="PB">PB</option>
+                                            <option value="PR">PR</option>
+                                            <option value="PE">PE</option>
+                                            <option value="PI">PI</option>
+                                            <option value="RJ">RJ</option>
+                                            <option value="RN">RN</option>
+                                            <option value="RS">RS</option>
+                                            <option value="RO">RO</option>
+                                            <option value="RR">RR</option>
+                                            <option value="SC">SC</option>
+                                            <option value="SP">SP</option>
+                                            <option value="SE">SE</option>
+                                            <option value="TO">TO</option>
+                                        </select>
 
-                                <div class="invalid-feedback">
-                                    Por favor, insira um estado válido.
+                                        <div class="invalid-feedback">
+                                            Por favor, insira um estado.
+                                        </div>
+                                    </div>
+                                    <div class="col-md-3 mb-3">
+                                        @Html.LabelFor(model => model.CEP)
+                                        @Html.EditorFor(model => model.CEP, new { htmlAttributes = new { @class = "form-control", @id = "txtCEP" } })
+                                        <div class="invalid-feedback">
+                                            Por favor, escolha uma CEP.
+                                        </div>
+                                    </div>
+                                    <div class="col-md-5 mb-3">
+                                        @Html.LabelFor(model => model.Complemento)
+                                        @Html.EditorFor(model => model.Complemento, new { htmlAttributes = new { @class = "form-control" } })
+                                        <div class="invalid-feedback">
+                                            Insira um complemento.
+                                        </div>
+                                    </div>
+                                    <div class="col-md-5 mb-3">
+                                        @Html.LabelFor(model => model.Bairro)
+                                        @Html.EditorFor(model => model.Complemento, new { htmlAttributes = new { @class = "form-control" } })
+                                        <div class="invalid-feedback">
+                                            Insira um bairro.
+                                        </div>
+                                    </div>
+                                    <div class="col-md-5 mb-3">
+                                        @Html.LabelFor(model => model.Telefone)
+                                        @Html.EditorFor(model => model.Telefone, new { htmlAttributes = new { @class = "form-control" } })
+                                        <div class="invalid-feedback">
+                                            Insira um telefone.
+                                        </div>
+                                    </div>
+                                    <div class="col-md-5 mb-3">
+                                        @Html.LabelFor(model => model.Celular)
+                                        @Html.EditorFor(model => model.Celular, new { htmlAttributes = new { @class = "form-control" } })
+                                        <div class="invalid-feedback">
+                                            Insira um celular.
+                                        </div>
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="col-md-3 mb-3">
-                                @Html.LabelFor(model => model.CEP)
-                                @Html.EditorFor(model => model.CEP, new { htmlAttributes = new { @class = "form-control", @id = "txtCEP" } })
-                                <div class="invalid-feedback">
-                                    É obrigatório inserir um CEP.
-                                </div>
-                            </div>
-                        </div>
                         <hr class="mb-4">
                         <button class="btn btn-primary btn-lg btn-block" type="submit">Concluir Cadastro</button>
 </form>
             </div>
         </div>
 </body>
-</html>
