--- a/AmigoDono.Web/Views/Shared/_Layout.cshtml
+++ b/AmigoDono.Web/Views/Shared/_Layout.cshtml
@@ -6,11 +6,41 @@
     <link href="~/Content/css/bootstrap.min.css" rel="stylesheet">
     <link href="~/Content/css/pets.css" rel="stylesheet">
     <link href="~/Content/css/fom-validation.css">
-    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
-    <link rel="stylesheet" href="/resources/demos/style.css">
-    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <link rel="stylesheet" href="http://code.jquery.com/ui/1.9.0/themes/base/jquery-ui.css" />
+    <script src="http://code.jquery.com/jquery-1.8.2.js"></script>
+    <script src="http://code.jquery.com/ui/1.9.0/jquery-ui.js"></script>
+    <script src="~/Scripts/Mascaras.js"></script>
+    <script src="~/Scripts/pets.js"></script>
     <title>@ViewBag.Title</title>
+
+    @*<script>
+        // Exemplo de JavaScript para desativar o envio do formulário, se tiver algum campo inválido.
+        (function () {
+            'use strict';
+
+            window.addEventListener('load', function () {
+                // Selecione todos os campos que nós queremos aplicar estilos Bootstrap de validação customizados.
+                var forms = document.getElementsByClassName('needs-validation');
+
+                // Faz um loop neles e previne envio
+                var validation = Array.prototype.filter.call(forms, function (form) {
+                    form.addEventListener('submit', function (event) {
+                        if (form.checkValidity() === false) {
+                            event.preventDefault();
+                            event.stopPropagation();
+                        }
+                        form.classList.add('was-validated');
+                    }, false);
+                });
+            }, false);
+        })();</script>*@
+    <script>
+        $(function () {
+            $("#datepicker").datepicker({
+                dateFormat: 'dd/mm/yy'
+            });
+        })
+    </script>
 
     @Scripts.Render("~/bundles/modernizr")
 </head>
@@ -33,7 +63,7 @@
                     <li>@Html.ActionLink("Fale Conosco", "Contact", "Home")</li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right btn-default" style="margin:0px; border-radius: 5px; margin-right: 5px">
-                    <li>@Html.ActionLink("Entrar", "Index", "Login")</li>
+                    <li>@Html.ActionLink("Entrar", "Signin", "Login")</li>
                 </ul>
             </div>
         </nav>
@@ -46,6 +76,14 @@
         </footer>
     </div>
 
+    @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/bootstrap")
+    @Scripts.Render("~/bundles/inputmask")
+    @Scripts.Render("~/bundles/jqueryval")
+    @Scripts.Render("~/bundles/addjs")
+    @Scripts.Render("~/bundles/addcss")
+    @RenderSection("scripts", required: false)
+
 
     @if (ViewBag.Alerta != null)
     {
@@ -53,35 +91,6 @@
                 bootbox.alert('@ViewBag.Alerta');
         </script>
     }
-    <script>
-        // Exemplo de JavaScript para desativar o envio do formulário, se tiver algum campo inválido.
-        (function () {
-            'use strict';
-
-            window.addEventListener('load', function () {
-                // Selecione todos os campos que nós queremos aplicar estilos Bootstrap de validação customizados.
-                var forms = document.getElementsByClassName('needs-validation');
-
-                // Faz um loop neles e previne envio
-                var validation = Array.prototype.filter.call(forms, function (form) {
-                    form.addEventListener('submit', function (event) {
-                        if (form.checkValidity() === false) {
-                            event.preventDefault();
-                            event.stopPropagation();
-                        }
-                        form.classList.add('was-validated');
-                    }, false);
-                });
-            }, false);
-        })();</script>
-
-    <script src="~/Scripts/Mascaras.js"></script>
-    <script src="~/Scripts/pets.js"></script>
-
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/bootstrap")
-    @Scripts.Render("~/bundles/inputmask")
-    @RenderSection("scripts", required: false)
 
 </body>
 </html>
