--- a/AmigoDono.Web/Views/AMIGO/Create.cshtml
+++ b/AmigoDono.Web/Views/AMIGO/Create.cshtml
@@ -279,7 +279,7 @@
                     </div>
                     <div class="col-md-5 mb-3">
                         @Html.LabelFor(model => model.Bairro)
-                        @Html.EditorFor(model => model.Complemento, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.EditorFor(model => model.Bairro, new { htmlAttributes = new { @class = "form-control" } })
                         <div class="invalid-feedback">
                             Insira um bairro.
                         </div>
@@ -327,7 +327,7 @@
                 });
             });
         </script>
-        <script type="text/javascript">
+        <script>
             jQuery(function ($) {
                 $("#txtTelefoneRes").mask("(99) 9999-9999");
                 $("#txtTelefoneCel").mask("(99) 9 9999-9999");
