--- a/AmigoDono.Web/Views/Shared/_Layout.cshtml
+++ b/AmigoDono.Web/Views/Shared/_Layout.cshtml
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="~/Content/css/bootstrap.min.css" rel="stylesheet">
     <link href="~/Content/css/pets.css" rel="stylesheet">
-    <link href="~/Content/css/fom-validation.css">
     <link rel="stylesheet" href="http://code.jquery.com/ui/1.9.0/themes/base/jquery-ui.css" />
     <script src="~/Scripts/jquery-3.3.1.min.js"></script>
     <script src="~/Scripts/Mascaras.js"></script>
@@ -14,7 +13,7 @@
 
     @Scripts.Render("~/bundles/modernizr")
 </head>
-<body>
+<body style="background-color: #4cc2c4">
     <header>
         <nav class="navbar navbar-default navbar-fixed-top" style="background-color: #ddbb24">
             <img alt="Owner's Friend" class="img-responsive navbar-left" src="~/Content/imagens/Logo2.png" width="72" height="72" title="Owner's Friend">
