--- a/AmigoDono.Web/Views/DENUNCIA/Create.cshtml
+++ b/AmigoDono.Web/Views/DENUNCIA/Create.cshtml
@@ -11,7 +11,6 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>DENUNCIA</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
@@ -19,14 +18,6 @@
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Denunciante, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Denunciante, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.TextoDenuncia, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.TextoDenuncia, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.TextoDenuncia, "", new { @class = "text-danger" })
             </div>
         </div>
 
@@ -110,17 +101,17 @@
             </div>
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.DataResposta, htmlAttributes: new { @class = "control-label col-md-2" })
+          <div class="form-group">
+            @Html.LabelFor(model => model.TextoDenuncia, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.DataResposta, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.DataResposta, "", new { @class = "text-danger" })
+                @Html.TextAreaFor(model => model.TextoDenuncia, 10, 132, new { htmlAttributes = new { @class = "form-control'" } })
+                @Html.ValidationMessageFor(model => model.TextoDenuncia, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Enviar" class="btn btn-default" />
             </div>
         </div>
     </div>
