--- a/AmigoDono.Web/Views/Login/Signin.cshtml
+++ b/AmigoDono.Web/Views/Login/Signin.cshtml
@@ -21,7 +21,7 @@
     <link href="~/Content/css/signin.css" rel="stylesheet">
     <style>
         body {
-            background: #4cc2c4;
+            background: #ddbb24;
         }
     </style>
 </head>
