--- a/AmigoDono.Web/Views/Shared/_Layout.cshtml
+++ b/AmigoDono.Web/Views/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
                     </li>
                     <li>@Html.ActionLink("Cuidados", "Contact", "Home")</li>
                     <li>@Html.ActionLink("Denúncias", "Create", "DENUNCIA")</li>
-                    <li>@Html.ActionLink("Fale Conosco", "FaleConosco", "Feedback")</li>
+                    <li>@Html.ActionLink("Fale Conosco", "FaleConosco", "FEEDBACK")</li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right btn-default" style="margin:0px; border-radius: 5px; margin-right: 5px">
                     <li>@Html.ActionLink("Entrar", "Signin", "Login")</li>
