--- a/AmigoDono.Web/Views/Feedback/FaleConosco.cshtml
+++ b/AmigoDono.Web/Views/Feedback/FaleConosco.cshtml
@@ -1,89 +1,218 @@
-﻿
+﻿@model AmigoDono.Model.FEEDBACK
 @{
+
     ViewBag.Title = "Fale Conosco";
+
 }
 
+
+
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="keywords" content="Feedback Widget Responsive, Login form web template, Sign up Web Templates, Flat Web Templates, Login signup Responsive web template, Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyEricsson, Motorola web design" />
-<!-- //for-mobile-apps -->
-<link href='//fonts.googleapis.com/css?family=Amaranth:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
-<link href='//fonts.googleapis.com/css?family=Josefin+Slab:400,100,100italic,300,300italic,400italic,600,600italic,700,700italic' rel='stylesheet' type='text/css'>
-<link href='//fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,700italic,800,800italic' rel='stylesheet' type='text/css'>
-<link href="~/Content/css/feedback.css" rel="stylesheet" type="text/css" media="all" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta name="keywords" content="Feedback Widget Responsive, Login form web template, Sign up Web Templates, Flat Web Templates, Login signup Responsive web template, Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyEricsson, Motorola web design" />
+    <!-- //for-mobile-apps -->
+    <link href='//fonts.googleapis.com/css?family=Amaranth:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
+    <link href='//fonts.googleapis.com/css?family=Josefin+Slab:400,100,100italic,300,300italic,400italic,600,600italic,700,700italic' rel='stylesheet' type='text/css'>
+    <link href='//fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,700italic,800,800italic' rel='stylesheet' type='text/css'>
+    <link href="~/Content/css/feedback.css" rel="stylesheet" type="text/css" media="all" />
 </head>
 <body>
     <div class="content">
-        <h1>Feedback Widget</h1>
+        <h1>Dê sua opinião a respeito do nosso trabalho</h1>
         <div class="main">
             <form>
                 <h5>Nome</h5>
-                <input type="text" value="Digite aqui" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Type here';}" required="">
+                <input type="text" value="Digite aqui" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Digite aqui';}" required="">
                 <h5>Email</h5>
-                <input type="text" value="rafael.lduarte@gmail.com" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'johnkeith@mail.com';}" required="">
+                <input type="text" value="rafael.lduarte@gmail.com" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'rafael.lduarte@gmail.com';}" required="">
+
                 <h5>Sua opinião</h5>
-                <textarea onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Type here';}" required="">Type here</textarea>
+
+                <textarea onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Digite aqui';}" required="">Digite aqui</textarea>
+
             </form>
-            <h5>Sua eperiência no site</h5>
+
+            @*<h5>Sua eperiência no site</h5>
+
             <div class="radio-btns">
+
                 <div class="swit">
+
                     <div class="check_box_one"> <div class="radio"> <label><input type="radio" name="radio" checked=""><i></i>Muito boa</label> </div></div>
+
                     <div class="check_box"> <div class="radio"> <label><input type="radio" name="radio"><i></i>Boa</label> </div></div>
+
                     <div class="check_box"> <div class="radio"> <label><input type="radio" name="radio"><i></i>Fair</label> </div></div>
+
                     <div class="check_box"> <div class="radio"> <label><input type="radio" name="radio"><i></i>Poor</label> </div></div>
+
                     <div class="clear"></div>
+
                 </div>
+
             </div>
+
             <h5>Timely Response</h5>
+
             <div class="radio-btns">
+
                 <div class="swit">
+
                     <div class="check_box_one"> <div class="radio1"> <label><input type="radio" name="radio1" checked=""><i></i>Very Good</label> </div></div>
+
                     <div class="check_box"> <div class="radio1"> <label><input type="radio" name="radio1"><i></i>Good</label> </div></div>
+
                     <div class="check_box"> <div class="radio1"> <label><input type="radio" name="radio1"><i></i>Fair</label> </div></div>
+
                     <div class="check_box"> <div class="radio1"> <label><input type="radio" name="radio1"><i></i>Poor</label> </div></div>
+
                     <div class="clear"></div>
+
                 </div>
+
             </div>
+
             <h5>Our Support</h5>
+
             <div class="radio-btns">
+
                 <div class="swit">
+
                     <div class="check_box_one"> <div class="radio2"> <label><input type="radio" name="radio2" checked=""><i></i>Very Good</label> </div></div>
+
                     <div class="check_box"> <div class="radio2"> <label><input type="radio" name="radio2"><i></i>Good</label> </div></div>
+
                     <div class="check_box"> <div class="radio2"> <label><input type="radio" name="radio2"><i></i>Fair</label> </div></div>
+
                     <div class="check_box"> <div class="radio2"> <label><input type="radio" name="radio2"><i></i>Poor</label> </div></div>
+
                     <div class="clear"></div>
+
                 </div>
+
             </div>
+
             <h5>Overall Satisfaction</h5>
+
             <div class="radio-btns">
+
                 <div class="swit">
+
                     <div class="check_box_one"> <div class="radio3"> <label><input type="radio" name="radio3" checked=""><i></i>Very Good</label> </div></div>
+
                     <div class="check_box"> <div class="radio3"> <label><input type="radio" name="radio3"><i></i>Good</label> </div></div>
+
                     <div class="check_box"> <div class="radio3"> <label><input type="radio" name="radio3"><i></i>Fair</label> </div></div>
+
                     <div class="check_box"> <div class="radio3"> <label><input type="radio" name="radio3"><i></i>Poor</label> </div></div>
+
                     <div class="clear"></div>
+
                 </div>
+
             </div>
+
             <h5>Want to rate with us for customer services?</h5>
+
             <span class="starRating">
+
                 <input id="rating5" type="radio" name="rating" value="5">
+
                 <label for="rating5">5</label>
+
                 <input id="rating4" type="radio" name="rating" value="4">
+
                 <label for="rating4">4</label>
+
                 <input id="rating3" type="radio" name="rating" value="3">
+
                 <label for="rating3">3</label>
+
                 <input id="rating2" type="radio" name="rating" value="2" checked>
+
                 <label for="rating2">2</label>
+
                 <input id="rating1" type="radio" name="rating" value="1">
+
                 <label for="rating1">1</label>
-            </span>
+
+            </span>*@
+
             <form>
-                <h5>Is there anything you would like to tell us?</h5>
-                <textarea onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Type here';}" required="">Type here</textarea>
-                <input type="submit" value="Send Feedback">
+
+                <h5>Há algo que você gostaria de nos dizer?</h5>
+
+                <textarea onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Dugite aqui';}" required="">Digite aqui</textarea>
+
+                <input type="submit" value="Enviar Feedback">
+
             </form>
+
         </div>
-        </div>
+
+    </div>
+
 </body>
+
+
+@*using (Html.BeginForm())
+{
+    @Html.AntiForgeryToken()
+
+    <div class="form-horizontal">
+        <h4>FEEDBACK</h4>
+        <hr />
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        <div class="form-group">
+            @Html.LabelFor(model => model.IDF, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.IDF, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.IDF, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.Nome, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Nome, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Nome, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.Opiniao, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Opiniao, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Opiniao, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.Feedback, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Feedback, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Feedback, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" value="Create" class="btn btn-default" />
+            </div>
+        </div>
+    </div>
+}*@
+
+<div>
+    @Html.ActionLink("Voltar", "Index", "Home")
+</div>
