--- a/AmigoDono.Web/Views/Home/Index.cshtml
+++ b/AmigoDono.Web/Views/Home/Index.cshtml
@@ -14,20 +14,14 @@
     <meta name="description" content="Friend of the Owner é uma página web para incentivar a adoção de animais que se encontram em ONGs expecializadas.">
     <meta name="keywords" content="Owner's Friend, AmigoDono, web, página web, ONGs, cão, cachorro, adoção, adotar, animais, gatos">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <style>
-        body {
-            background: #4cc2c4;
-        }
-    </style>
 </head>
 <body>
     <div class="container-fluid" style="margin-top: 150px">
         <div class="row">
-        </div>
         <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
             <div class="foto">
                 <div class="text-center">
-                    <img alt="Sasha" class="img-responsive" src="">
+                    <img alt="Sasha" class="img-responsive" src="~/Content/imagens/Sasha.png">
                 </div>
                 <div>
                     <div>
@@ -43,7 +37,6 @@
                             <h4>Cão Comunitário</h4>
                         </div>
                         <div>
-
                             <div class="capturar">
                                 <a class="btn btn-warning btn-lg center-block" href="javascript:;" onclick="confirmarCaptura(162, 4);" title="Capturar amigo">Capturar amigo</a>
                             </div>
@@ -58,7 +51,7 @@
         <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
             <div class="foto">
                 <div class="text-center">
-                    <img alt="Jax" class="img-responsive" src="">
+                    <img alt="Batatinha" class="img-responsive" src="~/Content/imagens/Batatinha.png">
                 </div>
                 <div>
                     <div>
@@ -74,7 +67,6 @@
                             <h4>Canil Municipal</h4>
                         </div>
                         <div>
-
                             <div class="capturar">
                                 <a class="btn btn-warning btn-lg center-block" href="javascript:;" onclick="confirmarCaptura(137, 1);" title="Capturar amigo">Capturar amigo</a>
                             </div>
@@ -89,7 +81,7 @@
         <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
             <div class="foto">
                 <div class="text-center">
-                    <img alt=" Hermes" class="img-responsive" src="">
+                    <img alt="Hermes" class="img-responsive" src="~/Content/imagens/Hermes.png">
                 </div>
                 <div>
                     <div>
@@ -105,7 +97,6 @@
                             <h4>Canil Municipal</h4>
                         </div>
                         <div>
-
                             <div class="capturar">
                                 <a class="btn btn-warning btn-lg center-block" href="javascript:;" onclick="confirmarCaptura(135, 1);" title="Capturar amigo">Capturar amigo</a>
                             </div>
@@ -120,7 +111,7 @@
         <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
             <div class="foto">
                 <div class="text-center">
-                    <img alt=" Rex" class="img-responsive" src="">
+                    <img alt="Cash" class="img-responsive" src="~/Content/imagens/Cash.png">
                 </div>
                 <div>
                     <div>
@@ -136,7 +127,6 @@
                             <h4>Canil Municipal</h4>
                         </div>
                         <div>
-
                             <div class="capturar">
                                 <a class="btn btn-warning btn-lg center-block" href="javascript:;" onclick="confirmarCaptura(7, 1);" title="Capturar amigo">Capturar amigo</a>
                             </div>
@@ -151,7 +141,7 @@
         <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
             <div class="foto">
                 <div class="text-center">
-                    <img alt=" Rollo" class="img-responsive" src="">
+                    <img alt="Snow" class="img-responsive" src="~/Content/imagens/Snow.png">
                 </div>
                 <div>
                     <div>
@@ -167,7 +157,6 @@
                             <h4>Canil Municipal</h4>
                         </div>
                         <div>
-
                             <div class="capturar">
                                 <a class="btn btn-warning btn-lg center-block" href="javascript:;" onclick="confirmarCaptura(144, 1);" title="Capturar amigo">Capturar amigo</a>
                             </div>
@@ -182,7 +171,7 @@
         <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
             <div class="foto">
                 <div class="text-center">
-                    <img alt=" Dória" class="img-responsive" src="">
+                    <img alt="Van Gogh" class="img-responsive" src="~/Content/imagens/Van Gogh.png">
                 </div>
                 <div>
                     <div>
@@ -198,7 +187,6 @@
                             <h4>Canil Municipal</h4>
                         </div>
                         <div>
-
                             <div class="capturar">
                                 <a class="btn btn-warning btn-lg center-block" href="javascript:;" onclick="confirmarCaptura(131, 1);" title="Capturar amigo">Capturar amigo</a>
                             </div>
@@ -213,7 +201,7 @@
         <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
             <div class="foto">
                 <div class="text-center">
-                    <img alt=" Bob" class="img-responsive" src="">
+                    <img alt="Wolf" class="img-responsive" src="~/Content/imagens/Wolf.png">
                 </div>
                 <div>
                     <div>
@@ -229,7 +217,6 @@
                             <h4>Canil Municipal</h4>
                         </div>
                         <div>
-
                             <div class="capturar">
                                 <a class="btn btn-warning btn-lg center-block" href="javascript:;" onclick="confirmarCaptura(31, 1);" title="Capturar amigo">Capturar amigo</a>
                             </div>
@@ -244,7 +231,7 @@
         <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
             <div class="foto">
                 <div class="text-center">
-                    <img alt=" Cash" class="img-responsive" src="">
+                    <img alt="Will" class="img-responsive" src="~/Content/imagens/Will.png">
                 </div>
                 <div>
                     <div>
@@ -260,7 +247,6 @@
                             <h4>Canil Municipal</h4>
                         </div>
                         <div>
-
                             <div class="capturar">
                                 <a class="btn btn-warning btn-lg center-block" href="javascript:;" onclick="confirmarCaptura(127, 1);" title="Capturar amigo">Capturar amigo</a>
                             </div>
@@ -275,7 +261,7 @@
         <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
             <div class="foto">
                 <div class="text-center">
-                    <img alt=" Princesa" class="img-responsive" src="">
+                    <img alt="Vidinha" class="img-responsive" src="~/Content/imagens/Vidinha.png">
                 </div>
                 <div>
                     <div>
@@ -291,7 +277,6 @@
                             <h4>Canil Municipal</h4>
                         </div>
                         <div>
-
                             <div class="capturar">
                                 <a class="btn btn-warning btn-lg center-block" href="javascript:;" onclick="confirmarCaptura(151, 1);" title="Capturar amigo">Capturar amigo</a>
                             </div>
@@ -306,7 +291,7 @@
         <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
             <div class="foto">
                 <div class="text-center">
-                    <img alt=" Balancê" class="img-responsive" src="">
+                    <img alt="Kito" class="img-responsive" src="~/Content/imagens/Kito.png">
                 </div>
                 <div>
                     <div>
@@ -336,7 +321,7 @@
         <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
             <div class="foto">
                 <div class="text-center">
-                    <img alt=" Priscila" class="img-responsive" src="">
+                    <img alt="Vivi" class="img-responsive" src="~/Content/imagens/Vivi.png">
                 </div>
                 <div>
                     <div>
@@ -352,7 +337,6 @@
                             <h4>Canil Municipal</h4>
                         </div>
                         <div>
-
                             <div class="capturar">
                                 <a class="btn btn-warning btn-lg center-block" href="javascript:;" onclick="confirmarCaptura(151, 1);" title="Capturar amigo">Capturar amigo</a>
                             </div>
@@ -367,7 +351,7 @@
         <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
             <div class="foto">
                 <div class="text-center">
-                    <img alt=" Goku" class="img-responsive" src="">
+                    <img alt="Juice" class="img-responsive" src="~/Content/imagens/Juice.png">
                 </div>
                 <div>
                     <div>
@@ -394,6 +378,7 @@
                 </div>
             </div>
         </div>
+      </div>
     </div>
 </body>
 </html>
