--- a/AmigoDono.Web/Views/Login/Signin.cshtml
+++ b/AmigoDono.Web/Views/Login/Signin.cshtml
@@ -1,4 +1,8 @@
-﻿
+﻿@if (ViewBag.Mensagem == null)
+{
+    ViewBag.Mensagem = "";
+}
+
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
     ViewBag.Title = "Login";
@@ -27,21 +31,74 @@
 </head>
 
 <body class="text-center">
-    <form class="form-signin" method="post" action="~/">
-        <img class="mb-4" src="~/Content/imagens/Logo2.png" alt="Friend of The Owner" width="72" height="72">
-        <h1 class="h3 mb-3 font-weight-normal">Por favor, registre-se</h1>
-        <label for="inputEmail" class="sr-only">Email</label>
-        <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
-        <label for="inputPassword" class="sr-only">Senha</label>
-        <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
-        <div class="checkbox mb-3">
-            <label>
-                <input type="checkbox" value="remember-me"> Lembrar Senha
-            </label>
+    @*
+        <form class="form-signin" method="post" action="~/">
+            <img class="mb-4" src="~/Content/imagens/Logo2.png" alt="Friend of The Owner" width="72" height="72">
+            <h1 class="h3 mb-3 font-weight-normal">Por favor, registre-se</h1>
+
+            <label for="inputEmail" class="sr-only">Email</label>
+
+            <label for="inputPassword" class="sr-only">Senha</label>
+
+            <div class="checkbox mb-3">
+                <label>
+                    <input type="checkbox" value="remember-me"> Lembrar Senha
+                </label>
+            </div>
+
+
+
+
+            <br />
+            <p class="text-center">@Html.ActionLink("Não tem conta? Faça o seu cadastro", "Create", "AMIGO")</p>
+        </form>*@
+
+    @using (Html.BeginForm("Realiza", "Login", FormMethod.Get, new { id = "delete-form", role = "form" }))
+    {
+
+        @Html.TextBox("Email", null)
+        @Html.TextBox("Senha", null)
+
+    }
+    <button class="btn btn-lg btn-primary btn-block" onclick="$('#delete-form').submit();">Entrar</button>
+
+
+    <div class="modal" tabindex="-1" role="dialog" id="ModalMensagem">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Modal title</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <p>@Html.Raw(ViewBag.Mensagem)</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-primary">Save changes</button>
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                </div>
+            </div>
         </div>
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Entrar</button>
-        <br />
-        <p class="text-center">@Html.ActionLink("Não tem conta? Faça o seu cadastro","Create","AMIGO")</p>
-    </form>
+    </div>
+
 </body>
 </html>
+
+
+
+
+
+@section Scripts{
+    @if (ViewBag.Mensagem != "")
+    {
+        <script>
+            $("#ModalMensagem").modal('show');
+        </script>
+    }
+
+
+}
+
+
