--- a/AmigoDono.Web/Views/Shared/_Layout.cshtml
+++ b/AmigoDono.Web/Views/Shared/_Layout.cshtml
@@ -21,7 +21,7 @@
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <ul class="navbar-nav nav">
                     <li>
-                        @Html.ActionLink("Meus Dados", "Signin", "Login")
+                        @Html.ActionLink("Meus Dados", "Detalhes", "DADOS")
                     </li>
                     <li>
                         @Html.ActionLink("Apoiadores", "Contact", "Home")
