--- a/AmigoDono.Web/Views/DADOS/Detalhes.cshtml
+++ b/AmigoDono.Web/Views/DADOS/Detalhes.cshtml
@@ -4,8 +4,7 @@
     ViewBag.Title = "Meus Dados";
 }
 
-
-<div>
+<div style="margin-top: 10px">
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -171,6 +170,5 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.IDA }) |
     @Html.ActionLink("Back to List", "Index")
 </p>
