--- a/AmigoDono.Web/Views/Home/Index.cshtml
+++ b/AmigoDono.Web/Views/Home/Index.cshtml
@@ -91,6 +91,7 @@
 
         <td class="text-center">
             <button class="btn btn-success">Capturar Amigo</button>
+            <button class="btn btn-link">Detalhes</button>
         </td>
 
             @*<td>
